[gd_scene load_steps=11 format=3 uid="uid://b5tdxbd2o856n"]

[ext_resource type="Script" path="res://controleur/niveau_2.gd" id="1_d28i7"]
[ext_resource type="Script" path="res://controleur/selection_du_niveau.gd" id="1_otn70"]
[ext_resource type="Script" path="res://controleur/niveau_3.gd" id="3_5y1cn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5sit0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcr23"]
bg_color = Color(0, 0.337255, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v88is"]
bg_color = Color(0, 0, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upaqy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obwr6"]
bg_color = Color(0, 0.337255, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1oi8d"]
bg_color = Color(0.0627451, 0.0431373, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_elap2"]
bg_color = Color(0, 0.380392, 0.6, 1)

[node name="Selection du niveau" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otn70")

[node name="Titre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -242.0
offset_right = 242.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Selection du  niveau"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -152.0
offset_right = 189.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="niveau_1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxFlat_5sit0")
theme_override_styles/hover = SubResource("StyleBoxFlat_xcr23")
theme_override_styles/normal = SubResource("StyleBoxFlat_v88is")
text = "niveau 1"

[node name="niveau_2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxFlat_upaqy")
theme_override_styles/hover = SubResource("StyleBoxFlat_obwr6")
theme_override_styles/normal = SubResource("StyleBoxFlat_1oi8d")
disabled = true
text = "niveau 2"
script = ExtResource("1_d28i7")

[node name="niveau_3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxFlat_upaqy")
theme_override_styles/hover = SubResource("StyleBoxFlat_elap2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1oi8d")
disabled = true
text = "niveau 3"
script = ExtResource("3_5y1cn")

[node name="Retour" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 251.0
offset_top = 155.0
offset_right = 373.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
text = "Retour"

[connection signal="pressed" from="VBoxContainer/niveau_1" to="." method="_on_niveau_1_pressed"]
[connection signal="pressed" from="VBoxContainer/niveau_2" to="." method="_on_niveau_2_pressed"]
[connection signal="pressed" from="VBoxContainer/niveau_3" to="." method="_on_niveau_3_pressed"]
[connection signal="pressed" from="Retour" to="." method="_on_retour_pressed"]
